k8s/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tequity-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "tequity-production-ip"
spec:
  rules:
    - host: app.ajitgadkari.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: main-app
                port:
                  number: 80
    - host: admin.ajitgadkari.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: admin-app
                port:
                  number: 80
